--- a/CodeFund/package.json
+++ b/CodeFund/package.json
@@ -27,7 +27,9 @@
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "http-server": "^14.1.1",
         "phaser": "^3.88.2",
+        "phaser-box2d": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
