--- a/codefund/package.json
+++ b/codefund/package.json
@@ -25,6 +25,8 @@
         "vite": "^5.3.1"
     },
     "dependencies": {
-        "phaser": "^3.88.2"
+        "phaser": "^3.88.2",
+        "axios": "^1.6.5"
+
     }
 }
