--- a/codefund/package.json
+++ b/codefund/package.json
@@ -25,9 +25,9 @@
         "vite": "^5.3.1"
     },
     "dependencies": {
+        "axios": "^1.6.5",
+        "marked": "^15.0.11",
         "phaser": "^3.88.2",
-        "react": "^18.3.1",
-        "axios": "^1.6.5"
-
+        "react": "^18.3.1"
     }
 }
